# gb-vector

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gb-vector.cabal
.github/workflows/: ci.yml  publish.yml
src/GBVector/: Bezier.hs  Boolean.hs  Color.hs  Compose.hs  Element.hs  Gradient.hs  Noise.hs  Path.hs  PathOps.hs  Pattern.hs  SVG.hs  Shape.hs  Style.hs  Text.hs  Transform.hs  Types.hs
src/GBVector/SVG/: Parse.hs
test/: Main.hs
