cabal-version: 3.0
name:          gb-vector
version:       0.1.0.4
stability:     experimental
synopsis:      Pure Haskell SVG generation
description:
  A pure Haskell library for generating SVG.
  Composable @Element@ tree — style and transforms are constructors
  that wrap children. No XML library, no IO, just pure functions
  building @Text@. Dependencies: @base@ + @text@ only.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Devon Tomlin
maintainer:    devon.tomlin@novavero.ai
category:      Graphics
build-type:    Simple
tested-with:   GHC ==9.8.4
extra-doc-files: README.md CHANGELOG.md
homepage:      https://github.com/Gondola-Bros-Entertainment/gb-vector
bug-reports:   https://github.com/Gondola-Bros-Entertainment/gb-vector/issues

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gb-vector.git

library
  exposed-modules:
    GBVector.Bezier
    GBVector.Boolean
    GBVector.Color
    GBVector.Compose
    GBVector.Element
    GBVector.Gradient
    GBVector.Noise
    GBVector.Path
    GBVector.PathOps
    GBVector.Pattern
    GBVector.SVG
    GBVector.SVG.Parse
    GBVector.Shape
    GBVector.Style
    GBVector.Text
    GBVector.Transform
    GBVector.Types

  hs-source-dirs:  src
  build-depends:
    base  >=4.18 && <5,
    text  >=2.0  && <2.2

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
  default-extensions:
    BangPatterns

test-suite gb-vector-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base       >=4.18 && <5,
    text       >=2.0  && <2.2,
    directory  >=1.3  && <1.4,
    gb-vector

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
  default-extensions:
    BangPatterns
